# sage_periods

./: Example Notebook.ipynb  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md  reference.md
docs/javascripts/: mathjax.js
sage_periods/: __init__.py  helpers.py  picard_fuchs.py  poly_lin_alg.py  reconstruction.py  rham_koszul.py
